<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InicioUser">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="0dp"
            android:layout_height="279dp"
            android:background="@drawable/plant_menu"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar4"
            android:layout_width="415dp"
            android:layout_height="97dp"
            android:background="@drawable/plant_under"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            app:layout_constraintVertical_bias="0.915" />

        <View
            android:id="@+id/ContainerComponents"
            style="@style/ContainerComponentsMenu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32" />


        <ImageButton
            android:id="@+id/home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnHome"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            app:srcCompat="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnEdit"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.725"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            app:srcCompat="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/exit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnExit"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            app:srcCompat="@drawable/ic_exit" />

        <ImageButton
            android:id="@+id/history"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnHistory"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            app:srcCompat="@drawable/ic_history" />

        <ImageButton
            android:id="@+id/maps"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnMap"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            app:srcCompat="@drawable/ic_map" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/PerfilUser"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223"
            app:srcCompat="@drawable/ic_perfiluser" />

        <TextView
            android:layout_width="205dp"
            android:layout_height="60dp"
            android:text="@string/ExPerfil"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.699"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/EmailUser"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.342"
            app:srcCompat="@drawable/ic_email" />

        <TextView
            android:layout_width="205dp"
            android:layout_height="60dp"
            android:text="@string/ExEmail"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.699"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.341" />

        <TextView
            android:layout_width="237dp"
            android:layout_height="77dp"
            android:gravity="center"
            android:text="SCORES"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.484" />

        <TextView
            android:layout_width="237dp"
            android:layout_height="77dp"
            android:gravity="center"
            android:text="100"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.553" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>