<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapUser">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/plant_menu"

            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/layoutmap"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/toolbar4"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3">



                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/plant_under"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            app:layout_constraintVertical_bias="0.915" />

        <ImageButton
            android:id="@+id/history"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnHistory"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            android:src="@drawable/ic_history" />

        <ImageButton
            android:id="@+id/maps"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnMap"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            android:src="@drawable/ic_map" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnHome"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnEdit"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.725"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            android:src="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/exit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/BtnExit"
            app:layout_constraintBottom_toBottomOf="@id/toolbar4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964"
            android:src="@drawable/ic_exit" />



    </androidx.constraintlayout.widget.ConstraintLayout>